/*
 * Copyright 2010-2015 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.jetbrains.kotlin.serialization.jvm;

option java_outer_classname = "JvmPackageTable";
option optimize_for = LITE_RUNTIME;

message PackageTable {
  // Names of .class files for each package
  repeated PackageParts package_parts = 1;

  // Names of .kotlin_metadata files for each package
  repeated PackageParts metadata_parts = 2;
}

message PackageParts {
    required string package_fq_name = 1;

    // Short names of files, without extension, present in this package
    repeated string class_name = 2;
}
